--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node"             /* make ts compiler include type definitions linked in package.json files*/
   },
   "include": [
-    "./src"
+    "./src",
+    "./assets"
 ]
 }
