init redux-saga, refactor reducer: move most business logic to middleware

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,9 +33,9 @@
       "comma-dangle": ["warn", {
         "arrays": "always",
         "objects": "always",
-        "imports": "never",
-        "exports": "never",
-        "functions": "never"
+        "imports": "always",
+        "exports": "always",
+        "functions": "always"
     }]
     },
     "globals": {
