--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.4",
     "@types/redux-actions": "^2.6.1",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
@@ -107,6 +108,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
