--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "sweetalert2": "^8.14.0"
   },
   "jest": {
     "rootDir": "src",
