--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/react": "^8.0.5",
     "@types/jest": "^24.0.15",
     "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
@@ -100,6 +101,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
