--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "cp_favi": "cp ./favicon.ico ./dist",
-    "clean": "rimraf dist/*"
+    "clean": "rimraf dist/*",
+    "bundle_analyze": "npm run clean && cross-env BUNDLE_ANALYZER=bundle_analyzer webpack --config ./webpack_config/webpack.config.prod.js --progress --bail --env dist -p"
   },
   "author": "",
   "license": "ISC",
@@ -58,12 +59,14 @@
     "@types/redux-actions": "^2.6.1",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^4.1.18",
+    "@types/webpack-bundle-analyzer": "^2.13.2",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-jquery": "^2.1.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.1",
@@ -95,6 +98,7 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.35.3",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
